# GazeCLI

./: .gitignore  README.md  pyproject.toml
src/gazecli/: __init__.py  cli.py
src/gazecli/_internal/: runner.py
src/gazecli/apps/: __init__.py  eye_tracker_3d.py  opengl_sphere.py
